# GUI_Movie_Management

./: CMakeLists.txt  MovieRental.db  README.md
backend/: Movie.cpp  Movie.h  MovieManager.cpp  MovieManager.h  User.cpp  User.h
database/: Database.cpp  Database.h
include/: AppData.h  AppState.h
screens/: AdminScreen.cpp  AdminScreen.h  DashboardScreen.cpp  DashboardScreen.h  LoginScreen.cpp  LoginScreen.h  SignupScreen.cpp  SignupScreen.h
src/: main.cpp
